fixed contact bug on mobile where email on contact-me was wider than the screen.

--- a/sections.css
+++ b/sections.css
@@ -195,3 +195,8 @@
     min-height: 500px;
     margin-bottom: 50px;
 }
+
+#contact-me
+{
+    min-height: 400px;
+}
